fix skewed text on mobile

--- a/sass/elements/_intro.scss
+++ b/sass/elements/_intro.scss
@@ -18,6 +18,8 @@
 }
 .date {
   @include font(h3, $wt: normal);
+  z-index: 3;
+  position: relative;
 
   @include breakpoint-max(md) {
     color: palette(red, body);
@@ -82,6 +84,11 @@
   top: -130px;
   right: -20px;
   font-family: $secondary;
+
+  @include breakpoint-max(lg) {
+    top: 30%;
+    right: -60%;
+  }
 
   @include breakpoint-max(md) {
     position: absolute;
